--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <!--img scarch -->
       <h2 class="anim ">Search  Cat images</h2>
         <form action="">
-            <input type="text" id="scarch-input" class="anim" placeholder="Scarch for Cat images">
+            <input type="text" id="scarch-input" class="anim" placeholder="Search for Cat images">
             <button id="scarch-button" class="anim">Search </button>
         </form>
 
