added socials and download button

--- a/index.html
+++ b/index.html
@@ -1,79 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Cat search</title>
   </head>
   <body>
     <div>
-      <header  class="header">
-
+      <header class="header">
         <a href="#" class="logo">
-          <img src="img/catlogo2.png" alt="cathub logo">
+          <img src="img/catlogo2.png" alt="cathub logo" />
           <span class="spanlogo"><span class="pink">Cat</span>Hub</span>
         </a>
-            <nav class="navbar">
-                <a href="">Home</a>
-                <a href="">About</a>
-                <a href="">Gallery</a>
-                <a href="">Contact</a>
-            </nav>
+        <nav class="navbar">
+          <a href="">Home</a>
+          <a href="https://www.github.com/warissayed">About</a>
+          <a href="">Gallery</a>
+          <a href="./Contact.html">Contact</a>
+        </nav>
       </header>
 
-
-    <!-- content   -->
+      <!-- content   -->
       <div class="content">
-          <h1 class="anim"> <span class="pink anim">Cat</span>Hub:<br>Your Cat Gallery </h1>
-            <p class="anim">Unlimited Cat Cuteness: CatHub never runs out of cat pictures.<br>
-            Scroll endless collection of heartwarming cat images.</p>
-          <a href="" class="btn anim">Scroll Down</a>
+        <h1 class="anim">
+          <span class="pink anim">Cat</span>Hub:<br />Your Cat Gallery
+        </h1>
+        <p class="anim">
+          Unlimited Cat Cuteness: CatHub never runs out of cat pictures.<br />
+          Scroll endless collection of heartwarming cat images.
+        </p>
+        <a href="" class="btn anim">Scroll Down</a>
       </div>
-        <div>
-            <img src="img/catbgimg.png" alt="catImg" class="contentCat-Img anim">
-        </div>
-
+      <div>
+        <img src="img/catbgimg.png" alt="catImg" class="contentCat-Img anim" />
+      </div>
 
       <!--img scarch -->
-      <h2 class="anim ">Search  Cat images</h2>
-        <form action="">
-            <input type="text" id="scarch-input" class="anim" placeholder="Search for Cat images">
-            <button id="scarch-button" class="anim">Search </button>
-        </form>
+      <h2 class="anim">Search Cat images</h2>
+      <form action="">
+        <input
+          type="text"
+          id="scarch-input"
+          class="anim"
+          placeholder="Search for Cat images"
+        />
+        <button id="scarch-button" class="anim">Search</button>
+      </form>
 
       <!--exp imgs-->
-        <div class="scarch-results">
+      <div class="scarch-results">
         <!--1-->
         <div class="scarch-result">
-            <img src="https://images.unsplash.com/photo-1617696448256-e92b5761bea3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1374&q=80"
-            alt="cat img">
-            <a href="https://unsplash.com/photos/ZlFKIG6dApg" target="_blank"> grey persian cat</a>
-
+          <img
+            src="https://images.unsplash.com/photo-1617696448256-e92b5761bea3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1374&q=80"
+            alt="cat img"
+          />
+          <a href="https://unsplash.com/photos/ZlFKIG6dApg" target="_blank">
+            grey persian cat</a
+          >
         </div>
         <!--2-->
-            <div class="scarch-result">
-            <img src="https://images.unsplash.com/photo-1518288774672-b94e808873ff?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1476&q=80"
-            alt="cat img">
-            <a href="https://unsplash.com/photos/ZlFKIG6dApg" target="_blank"> 'white snow cat' </a>
+        <div class="scarch-result">
+          <img
+            src="https://images.unsplash.com/photo-1518288774672-b94e808873ff?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1476&q=80"
+            alt="cat img"
+          />
+          <a href="https://unsplash.com/photos/ZlFKIG6dApg" target="_blank">
+            'white snow cat'
+          </a>
         </div>
-        
 
         <!--3-->
         <div class="scarch-result">
-            <img src="https://images.unsplash.com/photo-1574158622682-e40e69881006?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1480&q=80"
-            alt="cat img">
-            <a href="https://unsplash.com/photos/ZlFKIG6dApg" target="_blank"> "Just a wild cat" </a>
-         
-         </div>
-
-
+          <img
+            src="https://images.unsplash.com/photo-1574158622682-e40e69881006?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1480&q=80"
+            alt="cat img"
+          />
+          <a href="https://unsplash.com/photos/ZlFKIG6dApg" target="_blank">
+            "Just a wild cat"
+          </a>
+        </div>
+      </div>
+      <!--search more btn-->
+      <button class="show-more-btn">Show more</button>
     </div>
-    <!--search more btn-->
-    <button class="show-more-btn">Show more</button>
-
-    </div>
-  <script src="just.js"></script>
-
+    <script src="just.js"></script>
   </body>
-</html> 
+</html>
