updated reload on logo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div>
       <header class="header">
-        <a href="#" class="logo">
+        <a href="" class="logo">
           <img src="img/catlogo2.png" alt="cathub logo" />
           <span class="spanlogo"><span class="pink">Cat</span>Hub</span>
         </a>
